--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,9 +6,14 @@ h1, h3
 {
     text-align:center;
 }
+a
+{
+    text-decoration: none;
+    color: black;
+}
 h3
 {
-    background-color:black;
+    background-color:white;
     color:white;
     font-size:0.9em;
     margin-bottom:0px;
@@ -22,12 +27,6 @@ h3
 {
     width:70%;
     margin:auto;
-}
-
-a
-{
-    text-decoration: none;
-    color: blue;
 }
 .newComments{
     background-color: #82adf2;
