--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -32,7 +32,7 @@
             {% endif %}
         <a href="../public/index.php?route=logout">Déconnection</a>
         {% else %}
-            <a href=\'../public/index.php?route=register\'>Inscription</a> <a href="../public/index.php?route=login">Connection</a>
+            <a href="../public/index.php?route=register">Inscription</a> <a href="../public/index.php?route=login">Connection</a>
     {% endif %}
 
 {% endblock %}
