--- a/templates/comment.html.twig
+++ b/templates/comment.html.twig
@@ -22,6 +22,8 @@
         {% if app.session.name == data.name or app.session.id == 2 %}
             <a href="{{' ../public/index.php?route=delete_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Supprimer </a>
             <a href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Modifier</a>
+            {% else %}
+            <a href="{{ '../public/index.php?route=report&ID_comment='~data.id~'&ID_article='~app.get.article }}">Signaler</a>
         {% endif %}
     {% endfor %}
 </div>
@@ -35,31 +37,3 @@
     </form>
     </p>
 {% endblock %}
-
-
-{#
-
-foreach ($comments as $donnees)
-{
-?>
-<p><strong><?php echo htmlspecialchars($donnees['auteur']); ?></strong> le <?php echo $donnees['date_commentaire_fr']; ?>
-    <?php
-    if($_SESSION['pseudo'] ==  $donnees['auteur'] || $_SESSION['id'] == 2) {
-        echo '<a href="../public/index.php?route=delete_comment&ID_comment=' . $donnees['ID'] . '&ID_article=' . $_GET['article'] . '">Supprimer </a>';
-    echo '<a href="../public/index.php?route=get_comment&ID_comment=' . $donnees['ID'] . '&ID_article=' . $_GET['article'] . '">Modifier </a></p>';
-}
-?>
-<p><?php echo nl2br(htmlspecialchars($donnees['commentaire'])); ?></p>
-<?php
-} // Fin de la boucle des commentaires
-
-?>
-<p class="newComments">Ajouter un nouveau commentaire :
-    <form method="post" action="../public/index.php?route=add_comment&article=<?php echo $_GET['article'];?>" class="newComments">
-<p>
-    <label for="message">Message</label> :  <input type="text" name="message" id="message" value="<?php if(isset($_POST['message'])){echo $_POST['message'];}?>" /><br />
-
-    <input type="submit" value="Envoyer" />
-</p>
-</form>
-</p>#}
