--- a/templates/article_add.html.twig
+++ b/templates/article_add.html.twig
@@ -12,6 +12,9 @@
             <input type="submit" value="Envoyer" />
         </p>
     </form>
+
+{% endblock %}
+{% block javascripts %}
     <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=zi1bvc4rum0rk645xk1e5dq7ybgjb8fzaktl15q3m88bnqkl"></script>
     <script>
         tinymce.init({
