--- a/templates/article_update.html.twig
+++ b/templates/article_update.html.twig
@@ -7,16 +7,21 @@
     <p>Bienvenu sur l'éditeur de texte. ici vous pouvez ajouter votre nouvel article.</p>
     <p>Pensez à respecter au minimums les règles de français basique.</p>
     <form method="post" action="../public/index.php?route=update_article&article={{ app.get.article }}" class="newComments">
-        <label for="titre">Titre</label> : <input type="text" name="titre" id="pseudo" value="{{ data.title }}"/><br />
-        <label for="article">Article</label> :  <textarea name="article" id="message" value="{{ data.content }}"></textarea><br/>
+        <label for="titre">Titre</label> : <input type="text" name="titre" id="pseudo" value="{{ data.title }}"><br />
+        <label for="article">Article</label> :  <textarea name="article" id="message"> {{ data.content }} </textarea><br/>
 
         <input type="submit" value="Envoyer" />
     </form>
-        <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=zi1bvc4rum0rk645xk1e5dq7ybgjb8fzaktl15q3m88bnqkl"></script>
-        <script>
-            tinymce.init({
-                selector: '#message'
-            });
-        </script>
+
+
     {% endfor %}
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=zi1bvc4rum0rk645xk1e5dq7ybgjb8fzaktl15q3m88bnqkl"></script>
+    <script>
+        tinymce.init({
+            selector: '#message'
+        });
+    </script>
 {% endblock %}
