--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
     <link href="../public/css/style.css" rel="stylesheet" />
 </head>
 <body>
+<img  class = "image" src="../public/fonts/banniere2.jpg">
 <div id="content">
     {% block content %}
         <a href="../public/index.php">Retour à l'accueil</a>{% endblock %}
