--- a/templates/member_update.html.twig
+++ b/templates/member_update.html.twig
@@ -2,23 +2,22 @@
 
 {% block title %}Mon espace{% endblock %}
 {% block content %}
-    En construction
-        {{ dump(infoMember) }}
-    <form method="post" action="../public/index.php?route=update" class="newComments">
-        <label for="pseudo">Pseudo</label>
-        <input type="text" name="pseudo" id="pseudo" value="{{ app.session.name }}" />
-        <br />
-        <label for="pass">Nouveau mot de passe</label>
+    {{ parent() }}
+
+<form method="post" action="../public/index.php?route=newName" class="newName">
+    <label for="message">Pseudo</label> :  <input type="text" name="name" id="message" value={{ app.session.name }} ><br />
+    <input type="submit" value="Modifier" />
+</form>
+    <form method="post" action="../public/index.php?route=newMail" class="newMail">
+        <label for="message">Email</label> :  <input type="email" name="email" id="email" value={{ info.email }} ><br />
+        <input type="submit" value="Modifier" />
+    </form>
+    <form method="post" action="../public/index.php?route=newPass" class="newName">
+        <label for="pass">Mot de passe</label>
         <input type="password" name="pass" id="pass" />
         <br />
         <label for="checkpass">Confirmation mot de passe</label>
         <input type="password" name="checkpass" id="checkpass" />
-        <br />
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" value="{{ infoMember.email }}">
-
-        <input type="submit" value="Envoyer" />
+        <input type="submit" value="Changer mot de passe">
     </form>
-
-    <a href="../public/index.php">Retour à l'accueil</a>
 {% endblock %}
