--- a/templates/article_update.html.twig
+++ b/templates/article_update.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Article{% endblock %}
+{% block header %}{{ parent() }}{% endblock %}
 {% block content %}
     {% for data in result %}
 
