--- a/templates/comment_update.html.twig
+++ b/templates/comment_update.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Modifier votre commentaire{% endblock %}
+{% block header %}{{ parent() }}{% endblock %}
 {% block content %}
     <div class="news">
         <p>Modifier votre commentaire :</p>
