--- a/templates/article_add.html.twig
+++ b/templates/article_add.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Création{% endblock %}
+{% block header %}{{ parent() }}{% endblock %}
 {% block content %}
     <p>Bienvenu sur l'éditeur de texte. ici vous pouvez ajouter votre nouvel article.</p>
     <p>Pensez à respecter au minimums les règles de français basique.</p>
