--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,59 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="../public/css/style.css" rel="stylesheet" />
 </head>
 <body>
-<img  class = "image" src="../public/fonts/banniere2.jpg">
+{% block header %}
+
+<img  src="../public/fonts/banniere2.jpg" class = "img-fluid" alt="bannière">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active"> <a class="nav-link" href="../public/index.php">Accueil <span class="sr-only">(current)</span></a> </li>
+            {% if app.session.id %}
+                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=member">Mon Espace</a></li>
+                {% if app.session.id == 2 %}
+                    <li class="nav-item"><a class="nav-link" href="../public/index.php?route=admin">Administration</a></li>
+                {% endif %}
+                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=logout">Déconnection</a></li>
+            {% else %}
+                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=register">Inscription</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../public/index.php?route=login">Connection</a></li>
+            {% endif %}
+        </ul>
+
+    </div>
+</nav>
+{% endblock %}
 <div id="content">
     {% block content %}
-        <a href="../public/index.php">Retour à l'accueil</a>{% endblock %}
+    {% endblock %}
 </div>
-{% block javascripts %}
-<script> console.log('Hello World !');</script>
-{% endblock %}
 
+<footer>
+    <div class="container">
+        <div class="row">
+    <ul class="col-4 col-offset-4">
+        <li>Cookie</li>
+        <li>Mentions légales</li>
+        <li>CGU</li>
+    </ul>
+    <p class="col-4 text-center">Restez connectés</p>
+        </div>
+    </div>
+</footer>
+
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+{% endblock %}
 </body>
 </html>
