--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,39 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
+{% block header %}{{ parent() }}{% endblock %}
 {% block content %}
 <div id="contenu">
 <!--<h1>Mon super blog !</h1>-->
-<div class="nav">
-    <p>Accueil</p></br>
-    {% if app.session.name %}
-        {{ 'Bonjour ' ~ app.session.name }}
-    {% endif %}
-</br>
-    <ul>
-    {% if app.session.id %}
-        <li><a href="../public/index.php?route=member">Mon Espace</a></li>
-            {% if app.session.id == 2 %}
-                <li><a href="../public/index.php?route=admin">Administration</a></li>
-            {% endif %}
-        <li><a href="../public/index.php?route=logout">Déconnection</a></li>
-    {% else %}
-        <li><a href="../public/index.php?route=register">Inscription</a></li>
-        <li> <a href="../public/index.php?route=login">Connection</a></li>
-    {% endif %}
-    </ul>
-    </br>
-</div>
-<div class="news">
+<div class="container">
 {% for data in articles %}
     <h2><a href="../public/index.php?route=single&articleId={{ data.id }}">{{ data.title }}</a></h2>
-    <p>{{ data.content }}</p>
+    <p>{{ data.content|slice(0, 200)|raw }}...</p>
     {% if app.session.id == 1 or app.session.id == 2 %}
     <em><a href="{{ '../public/index.php?route=comment&article='~data.id}}">Commentaires </a></em>
     {% endif %}
 {% endfor %}
 </div>
-
 </div>
 
+{% endblock %}
+{% block javascripts %}
+{{ parent() }}
 {% endblock %}
