--- a/templates/listUser.html.twig
+++ b/templates/listUser.html.twig
@@ -1,11 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Utilisateurs{% endblock %}
+{% block header %}{{ parent() }}{% endblock %}
 {% block content %}
-    {{ dump(user) }}
     En construction
-    {% for data in user %}
-        <p>{{ data.name }}
-            {{ data.email }}</p>
-    {% endfor %}
+    <div class="container">
+    <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+        <tr>
+            <th scope="col">Nom</th>
+            <th scope="col">Email</th>
+        </tr>
+    </thead>
+    {% for user in users %}
+    <tbody>
+
+        <td>{{ user.name }}</td>
+         <td>{{ user.email }}</td>
+        </tbody>
+
+{% endfor %}
+    </table>
+    </div>
 {% endblock %}
