tinymce + secure admin

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -8,7 +8,7 @@
 <p>En construction</p>
     <div id="contenu">
         <ul>
-            <li><a href="../public/index.php?route=add_article">Créer un nouvel article</a></br></li>
+            <li><a href="../public/index.php?route=add_article">Créer un nouvel article</a></li>
             <li><a href="../public/index.php?route=reportComment">Liste des commentaires signalées</a></li>
             <li><a href="../public/index.php?route=listUser">Liste des utilisateurs</a></li>
         </ul>
