--- a/templates/article_add.html.twig
+++ b/templates/article_add.html.twig
@@ -16,7 +16,7 @@
 
 {% endblock %}
 {% block javascripts %}
-    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=zi1bvc4rum0rk645xk1e5dq7ybgjb8fzaktl15q3m88bnqkl"></script>
+    <script src="../tinymce/js/tinymce/tinymce.min.js"></script>
     <script>
         tinymce.init({
             selector: '#message'
