--- a/templates/member.html.twig
+++ b/templates/member.html.twig
@@ -7,10 +7,35 @@
 <div class="container-fluid">
 <div class="row">
     <div class="col-md-2 offset-md-1">
-    <ul >
-        <li><a href="../public/index.php?route=comment_member">Mes commentaires</a></br></li>
-        <li><a href="../public/index.php?route=update_member">Modifier vos données</a></br></li>
-        <li><a href="../public/index.php?route=delete_member">Supprimer</a></li>
+    <ul class="list-group">
+        <li class="list-group-item"><a class="btn btn-secondary" href="../public/index.php?route=comment_member">Mes commentaires</a></br></li>
+        <li class="list-group-item"><a class="btn btn-secondary" href="../public/index.php?route=update_member">Modifier vos données</a></br></li>
+        <li class="list-group-item">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+            Supprimer
+        </button></li>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Voulez-vous vraiment supprimer votre compte ?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                        <a class="btn btn-secondary" href="../public/index.php?route=delete_member">Supprimer</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </ul>
     </div>
 <div class="col-md-6 text-center">
@@ -24,7 +49,4 @@
 
 </div>
 </div>
-{% endblock %}
-{% block javascripts %}
-
 {% endblock %}
